mobile height and overflow fixed

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ p{
 }
 
 .expand{
-    height: 575px;
+    height: 570px;
    
 }
 
